--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <body>
     <svg id="game-board" width="80%" viewBox="0 0 300 300">
       <!-- Create all the shapes for your game board here! -->
-
+      <rect x="10" y="10" width="90" height="90" onclick="squareOne()"/>
+      <rect x="110" y="10" width="90" height="90" onclick="squareTwo()"/>
+      <rect x="210" y="10" width="90" height="90" onclick="squareThree()"/>
+      <rect x="10" y="110" width="90" height="90" onclick="squareFour()"/>
+      <rect x="110" y="110" width="90" height="90" onclick="squareFive()"/>
     </svg>
 
     <!-- This line of code points to your JavaScript file. No need to touch it. -->
