--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <rect x="210" y="10" width="90" height="90" onclick="squareThree()"/>
       <rect x="10" y="110" width="90" height="90" onclick="squareFour()"/>
       <rect x="110" y="110" width="90" height="90" onclick="squareFive()"/>
+      <rect x="210" y="110" width="90" height="90" onclick="squareSix()"/>
+      <rect x="10" y="210" width="90" height="90" onclick="squareSeven()"/>
+      <rect x="110" y="210" width="90" height="90" onclick="squareEight()"/>
+      <rect x="210" y="210" width="90" height="90" onclick="squareNine()"/>
     </svg>
 
     <!-- This line of code points to your JavaScript file. No need to touch it. -->
